--- a/src/components/SelectPlan.module.scss
+++ b/src/components/SelectPlan.module.scss
@@ -1,91 +1,39 @@
-.form {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	width: 500px;
-	height: 100%;
-}
-
-.title {
-	font-size: 35px;
-	font-weight: bold;
-}
-
-.description {
-	margin-top: 10px;
-	color: hsl(231, 11%, 63%);
-	font-size: 18px;
-}
-
-.submit {
-	align-self: end;
-	background-color: #044c88;
-	color: #fff;
-	border: none;
-	width: 120px;
-	border-radius: 10px;
-	padding: 15px 20px;
-	font-weight: 500;
-	cursor: pointer;
-}
-
-.subscriptions {
+.plansWrapper {
 	height: 300px;
 }
 
 .plans {
-	margin-top: 30px;
+	margin-top: 20px;
 	display: flex;
 	width: 500px;
 	justify-content: space-between;
 }
 
-.goBack {
-	border: none;
-	background: none;
-	color: #fff;
-	border: none;
-	font-weight: 500;
-	cursor: pointer;
-	color: #000;
-
-	&:hover {
-		color: #044c88;
-	}
-}
-
-.selectSubscription {
+.subscriptions {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-top: 30px;
 	height: 50px;
 	width: 100%;
-	background-color: hsla(243, 100%, 62%, 5%);
+	background-color: hsla(243, 100%, 62%, 15%);
 	border-radius: 5px;
 }
 
 .switcher {
 	width: 40px;
-	height: 20px;
+	height: 22px;
 	border-radius: 20px;
 	background-color: hsl(213, 96%, 18%);
 	display: flex;
 	align-items: center;
 	margin: 0 25px;
+	padding: 0;
+	border: none;
 
-	&.right .circle {
+	&.yearly .circle {
 		transform: translate(21px);
 	}
-}
-
-.circle {
-	height: 13px;
-	width: 13px;
-	border-radius: 100%;
-	background-color: #fff;
-	margin-left: 3px;
-	transition: all 0.1s linear;
 }
 
 .subscription {
@@ -110,9 +58,11 @@
 	color: #000;
 }
 
-.navigation {
-	display: flex;
-	justify-content: space-between;
-
-	margin-top: 30px;
+.circle {
+	height: 12px;
+	width: 12px;
+	border-radius: 100%;
+	background-color: #fff;
+	margin-left: 3px;
+	transition: all 0.1s linear;
 }
