refactor PersonalInfo and SelectPlan

--- a/src/components/Form.module.scss
+++ b/src/components/Form.module.scss
@@ -38,7 +38,7 @@
 	}
 }
 
-.submit {
+.goNext {
 	background-color: #044c88;
 	color: #fff;
 	border: none;
@@ -47,4 +47,5 @@
 	padding: 15px 20px;
 	font-weight: 500;
 	cursor: pointer;
+	margin-left: auto;
 }
