--- a/src/components/PersonalInfo.module.scss
+++ b/src/components/PersonalInfo.module.scss
@@ -11,6 +11,7 @@
 }
 
 .input {
+	width: 100%;
 	margin-bottom: 20px;
 	height: 45px;
 	text-indent: 10px;
@@ -25,7 +26,6 @@
 
 	&:focus {
 		outline: none;
-		border: 1px solid black;
 	}
 }
 
