--- a/src/components/Plan.module.scss
+++ b/src/components/Plan.module.scss
@@ -26,10 +26,12 @@
 .planTitle {
 	font-size: 20px;
 	font-weight: 500;
+	margin: 0;
 	margin-bottom: 5px;
 }
 
 .price {
+	margin: 0;
 	color: #aaa;
 	font-size: 16px;
 }
