--- a/src/components/SelectPlan.module.scss
+++ b/src/components/SelectPlan.module.scss
@@ -5,15 +5,14 @@
 .plans {
 	margin-top: 20px;
 	display: flex;
-	width: 500px;
 	justify-content: space-between;
 }
 
-.subscriptions {
+.planLength {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-top: 30px;
+	margin-top: 40px;
 	height: 50px;
 	width: 100%;
 	background-color: hsla(243, 100%, 62%, 15%);
@@ -27,25 +26,26 @@
 	background-color: hsl(213, 96%, 18%);
 	display: flex;
 	align-items: center;
-	margin: 0 25px;
 	padding: 0;
 	border: none;
+	appearance: none;
+	margin: 0;
 
-	&.yearly .circle {
-		transform: translate(21px);
+	&:not(:checked) + .circle::before {
+		transform: translateX(20px);
 	}
 }
 
 .subscription {
 	color: #aaa;
 	cursor: pointer;
-	width: 100px;
+	width: 90px;
 	height: 100%;
 	display: flex;
 	align-items: center;
 
 	&:first-child {
-		justify-content: end;
+		justify-content: center;
 	}
 
 	&:last-child {
@@ -59,10 +59,18 @@
 }
 
 .circle {
+	width: 12px;
+  height: 12px;
+  position: relative;
+}
+
+.circle::before {
+	content: '';
+	position: absolute;
 	height: 12px;
 	width: 12px;
 	border-radius: 100%;
 	background-color: #fff;
-	margin-left: 3px;
+	left: -36px;
 	transition: all 0.1s linear;
 }
