--- a/src/components/AddOn.module.scss
+++ b/src/components/AddOn.module.scss
@@ -5,25 +5,25 @@
 	padding: 20px;
 }
 
-.addOnSelected {
+.selected {
 	border: 1px solid hsl(243, 100%, 62%);
 }
 
-.addOnInfo {
+.info {
 	margin-left: 20px;
 }
 
-.addOnTitle {
+.title {
 	font-weight: bold;
 }
 
-.addOnDescription {
+.description {
 	color: #999;
 	font-size: 16px;
 	margin-top: 5px;
 }
 
-.addOnPrice {
+.price {
 	margin-left: auto;
 	display: flex;
 	align-items: center;
