--- a/src/components/finishingUp/FinishingUp.module.scss
+++ b/src/components/finishingUp/FinishingUp.module.scss
@@ -1,3 +1,5 @@
+@import '../../vars.css';
+
 .summary {
 	padding: 20px;
 	background-color: #f5f5f5;
@@ -26,9 +28,10 @@
 	color: #999;
 	text-decoration: underline;
 	cursor: pointer;
+	transition: color .2s ease;
 
 	&:hover {
-		color: black;
+		color: var(--primary);
 	}
 }
 
@@ -36,7 +39,7 @@
 	display: flex;
 	align-items: center;
 	font-weight: bold;
-	color: hsl(213, 96%, 18%);
+	color: var(--dark-blue);
 }
 
 .selectedAddOns {
@@ -56,7 +59,7 @@
 
 .addOnPrice {
 	font-size: 15px;
-	color: hsl(213, 96%, 18%);
+	color: var(--dark-blue);
 }
 
 .total {
@@ -73,7 +76,7 @@
 
 .totalPrice {
 	font-size: 20px;
-	color: hsl(243, 100%, 62%);
+	color: var(--primary);
 	font-weight: bold;
 }
 
