--- a/src/components/pickAddOns/AddOn.module.scss
+++ b/src/components/pickAddOns/AddOn.module.scss
@@ -1,12 +1,14 @@
+@import '../../vars.css';
+
 .addOn {
 	display: flex;
-	border: 1px solid #999;
+	border: 1px solid var(--grey);
 	border-radius: 10px;
 	padding: 20px;
 }
 
 .selected {
-	border: 1px solid hsl(243, 100%, 62%);
+	border: 1px solid var(--primary);
 }
 
 .info {
@@ -18,7 +20,7 @@
 }
 
 .description {
-	color: #999;
+	color: var(--grey);
 	font-size: 16px;
 	margin-top: 5px;
 }
@@ -27,10 +29,10 @@
 	margin-left: auto;
 	display: flex;
 	align-items: center;
-	color: hsl(243, 100%, 62%);
+	color: var(--primary);
 }
 
 .checkbox {
 	width: 20px;
-	accent-color: hsl(243, 100%, 62%);
+	accent-color: var(--primary);
 }
