--- a/src/components/selectPlan/PlanLengthSwitcher.module.scss
+++ b/src/components/selectPlan/PlanLengthSwitcher.module.scss
@@ -1,3 +1,5 @@
+@import '../../vars.css';
+
 .planLength {
 	display: flex;
 	justify-content: center;
@@ -5,7 +7,7 @@
 	margin-top: 40px;
 	height: 50px;
 	width: 100%;
-	background-color: hsla(243, 100%, 62%, 15%);
+	background-color: var(--primary-light);
 	border-radius: 5px;
 }
 
@@ -13,7 +15,7 @@
 	width: 40px;
 	height: 22px;
 	border-radius: 20px;
-	background-color: hsl(213, 96%, 18%);
+	background-color: var(--dark-blue);
 	display: flex;
 	align-items: center;
 	padding: 0;
@@ -27,7 +29,7 @@
 }
 
 .planLengthCase {
-	color: #aaa;
+	color: var(--grey);
 	cursor: pointer;
 	width: 90px;
 	height: 100%;
