--- a/src/components/Form.module.scss
+++ b/src/components/Form.module.scss
@@ -6,11 +6,33 @@
 	height: 100%;
 	width: 100%;
 	padding: 50px 100px;
+
+	@media (max-width: 640px) {
+		padding: 0;
+		display: flex;
+		align-items: center;
+		background-color: #eef5ff;
+	}
+}
+
+.formContent {
+	@media (max-width: 640px) {
+		width: 90%;
+		padding: 25px;
+		border-radius: 10px;
+		margin-top: -50px;
+		background-color: #fff;
+		height: auto;
+	}
 }
 
 .title {
 	font-size: 35px;
 	font-weight: bold;
+
+	@media (max-width: 640px) {
+		font-size: 23px;
+	}
 }
 
 .description {
@@ -18,12 +40,25 @@
 	margin-bottom: 40px;
 	color: var(--grey);
 	font-size: 18px;
+
+	@media (max-width: 640px) {
+		font-size: 16px;
+		margin-bottom: 20px;
+	}
 }
 
 .navigation {
+	width: 100%;
 	display: flex;
 	justify-content: space-between;
 	margin-top: auto;
+
+	@media (max-width: 640px) {
+		position: fixed;
+		bottom: 0;
+		padding: 15px;
+		background-color: #fff;
+	}
 }
 
 .goBack {
@@ -55,4 +90,3 @@
 .confirm {
 	background-color: var(--primary);
 }
-
