--- a/src/components/personalInfo/PersonalInfo.module.scss
+++ b/src/components/personalInfo/PersonalInfo.module.scss
@@ -3,6 +3,9 @@
 	margin-bottom: 10px;
 	display: flex;
 	justify-content: space-between;
+	@media (max-width: 640px) {
+		font-size: 14px;
+	}
 }
 
 .labelError {
