--- a/src/components/pickAddOns/AddOn.module.scss
+++ b/src/components/pickAddOns/AddOn.module.scss
@@ -5,6 +5,10 @@
 	border: 1px solid var(--grey);
 	border-radius: 10px;
 	padding: 20px;
+
+	@media (max-width: 640px) {
+		padding: 10px;
+	}
 }
 
 .selected {
@@ -13,16 +17,28 @@
 
 .info {
 	margin-left: 20px;
+
+	@media (max-width: 640px) {
+		margin-left: 10px;
+	}
 }
 
 .title {
 	font-weight: bold;
+
+	@media (max-width: 640px) {
+		font-size: 14px;
+	}
 }
 
 .description {
 	color: var(--grey);
 	font-size: 16px;
 	margin-top: 5px;
+
+	@media (max-width: 640px) {
+		font-size: 13px;
+	}
 }
 
 .price {
@@ -30,9 +46,17 @@
 	display: flex;
 	align-items: center;
 	color: var(--primary);
+
+	@media (max-width: 640px) {
+		font-size: 13px;
+	}
 }
 
 .checkbox {
 	width: 20px;
 	accent-color: var(--primary);
+
+	@media (max-width: 640px) {
+		width: 18px;
+	}
 }
