--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -7,12 +7,37 @@
 	background-image: url(./images/bg-sidebar-desktop.svg);
 	margin-left: 18px;
 	color: #fff;
+
+	@media (max-width: 640px) {
+		display: flex;
+		justify-content: center;
+		align-items: start;
+		background-image: url(./images/bg-sidebar-mobile.svg);
+		width: 375px;
+		height: 172px;
+		margin: 0;
+		gap: 20px;
+
+		.info {
+			display: none;
+		}
+	}
+}
+
+.info {
+	display: flex;
+	flex-direction: column;
+	align-items: start;
 }
 
 .step {
 	display: flex;
 	align-items: center;
 	margin-bottom: 20px;
+
+	@media (max-width: 640px) {
+		margin: 0;
+	}
 }
 
 .stepNum {
@@ -27,6 +52,10 @@
 	align-items: center;
 	font-weight: bold;
 	margin-right: 20px;
+
+	@media (max-width: 640px) {
+		margin: 0;
+	}
 }
 
 .currentStep {
@@ -48,10 +77,4 @@
 	font-weight: 500;
 	font-size: 15px;
 	letter-spacing: 1px;
-}
-
-.info {
-	display: flex;
-	flex-direction: column;
-	align-items: start;
 }
