--- a/src/components/thankYou/ThankYou.module.scss
+++ b/src/components/thankYou/ThankYou.module.scss
@@ -5,22 +5,44 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+
+	@media (max-width: 640px) {
+		padding: 30px 10px;
+	}
 }
 
 .thankYouImage {
 	width: 80px;
 	height: 80px;
 	margin-bottom: 30px;
+
+	@media (max-width: 640px) {
+		width: 60px;
+		height: 60px;
+		img {
+			width: 60px;
+		}
+	}
 }
 
 .title {
 	margin-bottom: 20px;
 	font-size: 30px;
 	font-weight: bold;
+
+	@media (max-width: 640px) {
+		font-size: 25px;
+	}
 }
 
 .text {
+	width: 97%;
 	color: var(--grey);
 	line-height: 30px;
 	text-align: center;
+
+	@media (max-width: 640px) {
+		font-size: 14px;
+		line-height: 25px;
+	}
 }
