update imgs import

--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -4,7 +4,7 @@
 	padding: 35px;
 	min-width: 274px;
 	height: 568px;
-	background-image: url(./images/bg-sidebar-desktop.svg);
+	background-image: url(../../../public/images/bg-sidebar-desktop.svg);
 	margin-left: 18px;
 	color: #fff;
 
@@ -12,7 +12,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: start;
-		background-image: url(./images/bg-sidebar-mobile.svg);
+		background-image: url(../../../public/images/bg-sidebar-mobile.svg);
 		width: 375px;
 		height: 172px;
 		margin: 0;
